--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0-rc.2",
     "eventproxy": "^1.0.0",
     "express": "^4.16.2",
+    "should": "^13.1.3",
     "superagent": "^3.8.1"
   }
 }
